// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-jsx > distinguishes between in-scope and out-of-scope primitives 1`] = `
"import { html } from "@inglorious/web";
import { dataGrid as DataGrid } from "./components";
export const app = {
  render(api) {
    return html\` \${DataGrid.render({
      prop1: "value"
    })} \${api.render("dataGrid1")} \`;
  }
};"
`;

exports[`vite-plugin-jsx > distinguishes between properties (.) and attributes 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<my-element id=\${id} class=\${cls} aria-label=\${label} data-test=\${test} .someProp=\${value} .complexData=\${obj}></my-element>\`;"
`;

exports[`vite-plugin-jsx > does not change parameters if api is already the last argument 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(entity, api) {
    return api.render("form");
  }
};"
`;

exports[`vite-plugin-jsx > does not generate closing tag for void elements 1`] = `
"import { html } from "@inglorious/web";
html\`<img src="image.png" />\`;"
`;

exports[`vite-plugin-jsx > does not inject api if component is not inside a 'render' method 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  notRender() {
    return api.render("form");
  }
};"
`;

exports[`vite-plugin-jsx > does not inject api if no capitalized component is used 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(entity) {
    return html\`<div>\${entity.name}</div>\`;
  }
};"
`;

exports[`vite-plugin-jsx > expands self-closing non-void HTML tags 1`] = `
"import { html } from "@inglorious/web";
html\`<div class="empty"></div>\`;"
`;

exports[`vite-plugin-jsx > handles SVG self-closing tags correctly 1`] = `
"import { html } from "@inglorious/web";
const Icon = () => html\`<svg> \${html\`<path d="M0 0h10v10H0z" />\`} \${html\`<circle cx="5" cy="5" r="5" />\`} </svg>\`;"
`;

exports[`vite-plugin-jsx > handles boolean attributes 1`] = `
"import { html } from "@inglorious/web";
html\`<input disabled checked readonly />\`;"
`;

exports[`vite-plugin-jsx > handles event listeners (@event syntax) 1`] = `
"import { html } from "@inglorious/web";
html\`<button @click=\${handleClick} @mouseover=\${() => {}}>Click</button>\`;"
`;

exports[`vite-plugin-jsx > handles fragments 1`] = `
"import { html } from "@inglorious/web";
const List = () => html\` \${html\`<li>A</li>\`} \${html\`<li>B</li>\`} \`;"
`;

exports[`vite-plugin-jsx > handles nested expressions and elements 1`] = `
"import { html, when } from "@inglorious/web";
const App = () => html\`<div>\${when(show, () => html\`<span>Visible</span>\`, () => null)}</div>\`;"
`;

exports[`vite-plugin-jsx > ignores empty expressions and comments 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<div>   \${html\`<span>Content</span>\`} </div>\`;"
`;

exports[`vite-plugin-jsx > injects api argument into render function if missing when using components 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(api) {
    return api.render("form");
  }
};"
`;

exports[`vite-plugin-jsx > injects api argument when component is nested inside a Fragment 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(api) {
    return html\` \${api.render("form")} \`;
  }
};"
`;

exports[`vite-plugin-jsx > injects api argument when component is nested inside standard elements 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(api) {
    return html\`<div> \${api.render("form")} </div>\`;
  }
};"
`;

exports[`vite-plugin-jsx > merges imports if @inglorious/web is already imported 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  show
}) => html\`<div>\${when(show, () => api.render("a"), () => api.render("b"))}</div>\`;"
`;

exports[`vite-plugin-jsx > moves api parameter to the end if it is not the last one 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(entity, api) {
    return api.render("form");
  }
};"
`;

exports[`vite-plugin-jsx > moves api parameter to the end when it is in the middle 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(entity, options, api) {
    return api.render("form");
  }
};"
`;

exports[`vite-plugin-jsx > transforms Array.map to repeat directive 1`] = `
"import { html } from "@inglorious/web";
const List = ({
  items
}) => html\`<ul> \${items.map(item => html\`<li>\${item}</li>\`)} </ul>\`;"
`;

exports[`vite-plugin-jsx > transforms Array.map with key to keyed repeat directive 1`] = `
"import { html } from "@inglorious/web";
const List = ({
  items
}) => html\`<ul> \${items.map(item => html\`<li .key=\${item.id}>\${item.name}</li>\`)} </ul>\`;"
`;

exports[`vite-plugin-jsx > transforms basic JSX elements 1`] = `
"import { html } from "@inglorious/web";
export const App = () => html\`<div>Hello World</div>\`;"
`;

exports[`vite-plugin-jsx > transforms capitalized components to api.render calls 1`] = `
"import { html } from "@inglorious/web";
export const app = {
  render(api) {
    return html\`\${api.render("form", {
      id: "f1",
      title: "My Form"
    })}\${api.render("list", {
      items: []
    })}\${api.render("footer")}\`;
  }
};"
`;

exports[`vite-plugin-jsx > transforms className to class 1`] = `
"import { html } from "@inglorious/web";
html\`<div class="container">Content</div>\`;"
`;

exports[`vite-plugin-jsx > transforms logical AND to when directive 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  show
}) => html\`<div>\${when(show, () => api.render("modal"))}</div>\`;"
`;

exports[`vite-plugin-jsx > transforms ternary operators to when directive 1`] = `
"import { html, when } from "@inglorious/web";
const App = ({
  isLoggedIn
}) => html\`<div>\${when(isLoggedIn, () => api.render("user"), () => api.render("login"))}</div>\`;"
`;
